--- a/Group-A/index.css
+++ b/Group-A/index.css
@@ -19,7 +19,6 @@ ul {
 
 body {
   font-family: "Be Vietnam Pro", sans-serif;
-  height: 120vh;
   background-color: #f7f7f8;
   position: relative;
 }
@@ -54,6 +53,7 @@ header {
   position: sticky;
   top: 0;
   background-color: #f7f7f8;
+  z-index: 2;
 }
 
 .header {
@@ -78,12 +78,11 @@ header {
   justify-content: center;
 }
 
-.logo img{
+.logo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 
 nav ul {
   display: flex;
@@ -154,8 +153,6 @@ nav a {
 
 footer {
   background: #fff;
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 
@@ -339,7 +336,7 @@ footer .bottom-side span {
   .sale-wrapper {
     padding: 10px 16px;
     max-width: calc(100%-32px);
-    margin: 40px 16px 0 ;
+    margin: 40px 16px 0;
   }
 
   .sale-wrapper a {
@@ -399,7 +396,7 @@ footer .bottom-side span {
     font-size: 15px;
   }
 
-  footer .top-side .right-side{
+  footer .top-side .right-side {
     flex-direction: column;
   }
 
@@ -431,4 +428,136 @@ footer .bottom-side span {
     font-size: 14px;
   }
 }
-g
+/* ---------------------MAIN--------------------------- */
+main {
+  margin-top: 100px;
+}
+
+.introduction {
+  display: flex;
+  flex-direction: column;
+  width: 965px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.introduction .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.introduction .wrapper .h2-container {
+  display: flex;
+  gap: 10px;
+  border-radius: 11px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #f1f1f3;
+  background-color: #fcfcfd;
+  padding: 14px 0;
+  position: relative;
+  width: calc(100% - 120px);
+  margin-bottom: 20px;
+}
+
+.introduction .wrapper .h2-container .introduction-effect {
+  position: absolute;
+  top: -30px;
+  left: -30px;
+}
+
+.introduction .wrapper .h2-container .bolt-img {
+  width: 34px;
+  height: 34px;
+  padding: 14px;
+  border-radius: 6px;
+  box-sizing: content-box;
+  background: #fff4e5;
+}
+
+.introduction .wrapper .h2-container .bolt-img img {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.introduction .wrapper .h2-container h2 {
+  color: #1a1a1a;
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.introduction .wrapper .h2-container h2 span {
+  color: #ff9500;
+}
+
+.introduction .wrapper h3 {
+  font-size: 38px;
+  color: #262626;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.introduction .wrapper p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #262626;
+  margin-bottom: 60px;
+}
+
+.introduction .btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+
+.introduction .btn-container button {
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  background: #ff9500;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 18px 24px;
+  cursor: pointer;
+  margin-bottom: 100px;
+}
+
+.introduction .btn-container button:nth-child(2) {
+  font-weight: 500;
+  background: #fff;
+  border-color: #f1f1f3;
+  color: #262626;
+}
+
+.introduction .btn-container button:active {
+  scale: 0.99;
+}
+
+main .sponsor-container {
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+  background: #fcfcfd;
+  display: flex;
+  padding: 30px;
+  margin-bottom: 100px;
+}
+
+main .sponsor-container .img-container{
+  padding: 30px 40px;
+  border-right:1px solid #F1F1F3;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main .sponsor-container .img-container:last-child{
+  border-right:1px solid transparent;
+  border-left:1px solid #F1F1F3;
+}
+
+main .index-main-image{
+  margin-bottom: 150px;
+}
