--- a/Group-A/courses_open_style.css
+++ b/Group-A/courses_open_style.css
@@ -19,7 +19,6 @@ ul {
 
 body {
   font-family: "Be Vietnam Pro", sans-serif;
-  height: 120vh;
   background-color: #f7f7f8;
   position: relative;
 }
@@ -54,6 +53,7 @@ header {
   position: sticky;
   top: 0;
   background-color: #f7f7f8;
+  z-index: 2;
 }
 
 .header {
@@ -78,12 +78,11 @@ header {
   justify-content: center;
 }
 
-.logo img{
+.logo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 
 nav ul {
   display: flex;
@@ -151,10 +150,150 @@ nav a {
 .burger-menu .bar:nth-child(1) {
   width: 18px;
 }
+main .top-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 150px;
+  margin-top: 133px;
+}
+main .top-side #heading {
+  width: 748px;
+  color: #262626;
+  font-size: 48px;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+}
+main .top-side #paragraph {
+  width: 748px;
+  color: #59595a;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+}
+.video {
+  width: 1596px;
+  height: 790px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+}
+
+#videoCover {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 0;
+}
+.video #triangle {
+  position: absolute;
+  z-index: 9999;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 9px solid rgba(255, 255, 255, 0.3);
+  padding: 14px;
+}
+#triangle img {
+  width: 44px;
+  height: 44px;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.cards .card {
+  width: 783px;
+  height: 698px;
+  background-color: #fff;
+  margin-top: 100px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.cards:nth-child(3) {
+  margin-bottom: 100px;
+}
+.card #number {
+  color: #262626;
+  text-align: right;
+  font-size: 80px;
+  font-weight: 700;
+  height: 59px;
+}
+.card #introduction {
+  color: #333;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 36px;
+  letter-spacing: -0.144px;
+}
+.card .feature-items {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.card .feature-items .feature-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #f1f1f3;
+  border-radius: 8px;
+  padding: 24px 30px;
+}
+.feature-item:nth-child(3) .time {
+  width: 167px;
+}
+.card .feature-items .feature-item .item-left-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  gap: 6px;
+}
+.card .feature-items .feature-item .item-left-side #heading {
+  color: #333;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  height: 27px;
+}
+.feature-item:nth-child(3) #heading {
+  margin-bottom: 30px;
+}
+.card .feature-items .feature-item .item-left-side #lesson {
+  color: #59595a;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  height: 27px;
+}
+.card .feature-items .feature-item .time {
+  padding: 12px 14px;
+  background-color: #f7f7f8;
+  color: #59595a;
+  display: flex;
+  align-items: center;
+  border-radius: 6px;
+  font-size: 18px;
+  font-weight: 400;
+  display: flex;
+  gap: 4px;
+}
+.active {
+  border: 2px solid #ffd599;
+  box-shadow: 0px 0px 0px 4px #fff4e5;
+  background-color: #fff;
+}
+.active .time {
+  background-color: #ffeacc !important;
+}
 
 footer {
   background: #fff;
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
@@ -339,7 +478,7 @@ footer .bottom-side span {
   .sale-wrapper {
     padding: 10px 16px;
     max-width: calc(100%-32px);
-    margin: 40px 16px 0 ;
+    margin: 40px 16px 0;
   }
 
   .sale-wrapper a {
@@ -399,7 +538,7 @@ footer .bottom-side span {
     font-size: 15px;
   }
 
-  footer .top-side .right-side{
+  footer .top-side .right-side {
     flex-direction: column;
   }
 
