--- a/Group-A/index.css
+++ b/Group-A/index.css
@@ -6,6 +6,7 @@
 
 button {
   font-family: inherit;
+  background: inherit;
 }
 
 a {
@@ -19,7 +20,6 @@ ul {
 
 body {
   font-family: "Be Vietnam Pro", sans-serif;
-  height: 120vh;
   background-color: #f7f7f8;
   position: relative;
 }
@@ -50,6 +50,9 @@ body {
   font-weight: 400;
 }
 
+/* sale-wrapper end */
+/* header start */
+
 header {
   position: sticky;
   top: 0;
@@ -61,6 +64,8 @@ header {
   justify-content: space-between;
   padding: 20px 0 24px 0;
   align-items: center;
+  margin-bottom: 80px;
+  z-index: 2;
 }
 
 .header .left-side {
@@ -78,12 +83,11 @@ header {
   justify-content: center;
 }
 
-.logo img{
+.logo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 
 nav ul {
   display: flex;
@@ -152,9 +156,46 @@ nav a {
   width: 18px;
 }
 
+/* header end */
+/* main start */
+
+.main-about {
+  /* max-width: calc(100% - 32px); */
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.main-about h2 {
+  color: #262626;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+.main-about p {
+  width: 748px;
+  color: #59595A;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.line {
+  background-color: #E4E4E7;
+  height: 1px;
+  max-width: 1860px;
+  margin: 0 auto;
+}
+
+
+/* main end */
+/* footer start */
+
 footer {
   background: #fff;
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
@@ -252,12 +293,16 @@ footer .bottom-side span {
   font-weight: 400;
 }
 
+/* footer end */
+
 @media screen and (max-width: 1440px) {
   .container {
     max-width: 1280px;
+    padding: 0 20px;
   }
 
   .sale-wrapper {
+    margin: 20px 16px 0;
     padding: 10px;
     max-width: 1400px;
   }
@@ -274,6 +319,7 @@ footer .bottom-side span {
 
   .header {
     padding: 16px 0 20px 0;
+    margin-bottom: 80px;
   }
 
   nav li {
@@ -285,6 +331,30 @@ footer .bottom-side span {
     padding: 12px 24px;
     font-size: 14px;
   }
+
+  /* header end */
+  /* main start */
+
+  .main-about {
+    /* max-width: calc(100% - 32px); */
+    padding-bottom: 40px;
+  }
+  
+  .main-about h2 {
+    font-size: 38px;
+  }
+  
+  .main-about p {
+    width: 600px;
+    font-size: 16px;
+  }
+  
+  .line {
+    max-width: 1400px;
+  }
+  
+  /* main end */
+  /* footer start */
 
   footer .container {
     padding: 60px 0 20px 0;
@@ -339,7 +409,7 @@ footer .bottom-side span {
   .sale-wrapper {
     padding: 10px 16px;
     max-width: calc(100%-32px);
-    margin: 40px 16px 0 ;
+    margin: 40px 16px 0;
   }
 
   .sale-wrapper a {
@@ -352,6 +422,7 @@ footer .bottom-side span {
 
   .header {
     padding: 14px 0;
+    margin-bottom: 50px;
   }
 
   .header .left-side {
@@ -380,6 +451,33 @@ footer .bottom-side span {
     visibility: visible;
   }
 
+  /* header end */
+  /* main start */
+
+  .main-about {
+    /* max-width: calc(100% - 32px); */
+    display:flex;
+    flex-direction: column;
+    gap: 16px;
+    padding-bottom: 50px;
+  }
+  
+  .main-about h2 {
+    font-size: 28px;
+  }
+  
+  .main-about p {
+    /* width: 358px; */
+    font-size: 14px;
+  }
+  
+  .line {
+    max-width: calc(100%-32px);
+  }
+
+  /* main end */
+  /* footer start */
+
   footer .container {
     padding: 50px 20px 24px;
     gap: 20px;
@@ -399,7 +497,7 @@ footer .bottom-side span {
     font-size: 15px;
   }
 
-  footer .top-side .right-side{
+  footer .top-side .right-side {
     flex-direction: column;
   }
 
